# RuAn

./: READEME.md  common_flavor.gradle.kts  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/example/ruan/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/example/ruan/: MainActivity.kt
app/src/main/java/com/example/ruan/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/test/java/com/example/ruan/: ExampleUnitTest.kt
buildSrc/: build.gradle.kts  settings.gradle.kts
buildSrc/src/main/java/com/example/buildsrc/: ProjectDependency.kt
common/commonui/: build.gradle.kts
common/commonui/src/androidTest/java/com/example/commonui/: ExampleInstrumentedTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
rust_sdk/: Cargo.toml  justfile
rust_sdk/.cargo/: config
rust_sdk/logging/: Cargo.toml
rust_sdk/logging/src/: lib.rs
rust_sdk/sdk-java/: Cargo.toml
rust_sdk/sdk-java/src/: lib.rs  logging.rs  util.rs
rust_sdk/sdk-lib/: Cargo.toml
sdkbridge/: build.gradle.kts
sdkbridge/src/androidTest/java/com/ss/ruan/sdkbridge/: ExampleInstrumentedTest.kt
sdkbridge/src/main/java/com/ss/ruan/sdkbridge/: RustGreetings.kt  SdkLogger.kt
sdkbridge/src/test/java/com/ss/ruan/sdkbridge/: ExampleUnitTest.kt
